--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore all .yml files
+*.yml
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -36,5 +39,3 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
-*.yml
